--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik:wght@300;400;600&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: var(--white-dark);
+  color: #010101;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  line-height: 1.25em;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div {
+  display: block;
+}
+:root {
+  --black: #010101;
+  --royal-blue: #4268fb;
+  --white-darkest: #e0e0e1;
+  --white: white;
+  --white-dark: #f3f3f4;
+  --black-light: #31313b;
+  --black-lightest: #484851;
+  --royal-blue-light: #e2edfe;
+}
+* {
+  box-sizing: border-box;
 }
